//
// Copyright 2018 - Present Hyperwallet
//
// Permission is hereby granted, free of charge, to any person obtaining a copy of this software
// and associated documentation files (the "Software"), to deal in the Software without restriction,
// including without limitation the rights to use, copy, modify, merge, publish, distribute,
// sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all copies or
// substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
// BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
// DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

"title_accounts" = "Accounts";
"select_transfer_method_country" = "Select Country";
"select_transfer_method_currency" = "Select Currency";
"remove_button_label" = "Remove";
"cancel_button_label" = "Cancel";
"ok_button_label" = "OK";
"try_again_button_label" = "Try Again";
"done_button_label" = "Done";
"search_placeholder_label" = "Search";
"add_transfer_method_fee_label" = "Transaction Fees: ";
"add_transfer_method_processing_time_label" = "Processing Time: ";
"unexpected_error_message" = "Oops... Something went wrong, please try again";
"network_connection_error_title" = "Connectivity Issue";
"unexpected_title" = "Unexpected Error";
"network_connection_error_message" = "We are encountering a problem processing the request. Please check your connectivity.";
"transfer_method_list_item_description" = "Ending on ";
"no_country_available_error_message" = "There is no country available";
"no_transfer_method_available_error_message" = "There is no transfer method available for %1$@ and %2$@";
"no_currency_available_error_message" = "There is no currency available for country %1$@";
"empty_list_transfer_method_message" = "You didn’t add an account yet. Once created, it will show up here!";
"add_account_title" = "Add Account";
"remove_transfer_method_confirmation_title" = "Remove Account";
"remove_transfer_method_confirmation_message" = "Are you sure you want to remove this account?";
"fee_flat_formatter" = "%1$@ %2$@";
"fee_percent_only_min_formatter" = "%1$@%% (Min:%2$@ %3$@)";
"fee_percent_only_max_formatter" = "%1$@%% (Max:%2$@ %3$@)";
"fee_percent_formatter" = "%1$@%% (Min:%2$@ %3$@, Max:%2$@ %4$@)";
"fee_mix_no_min_and_max_formatter" = "%1$@ %2$@ + %3$@%%";
"fee_mix_only_min_formatter" = "%1$@ %2$@ + %3$@%% (Min:%1$@ %4$@)";
"fee_mix_only_max_formatter" = "%1$@ %2$@ + %3$@%% (Max:%1$@ %4$@)";
"fee_mix_formatter" = "%1$@ %2$@ + %3$@%% (Min:%1$@ %4$@, Max:%1$@ %5$@)";
"fee_percent_no_min_and_max_formatter" = "%1$@%%";
"transfer_method_not_supported_message" = "This transfer method is currently not supported";
"error" = "Error";

// Transfer methods
"bank_account" = "Bank Account";
"bank_card" = "Debit Card";
"paper_check" = "Paper Check";
"prepaid_card" = "Prepaid Card";
"wire_account" = "Wire Account";
"paypal_account" = "PayPal";

//Select Transfer Method View
"select_a_country_message" = "Select a country";

// Add Transfer Method
"create_account_label" = "Create Account";
"enter_your_information_formatter" = "Enter your %@ information";
"bank_account_footer" = "On a paper check, the routing number is printed as the first 9 digits on the bottom of the check, followed by 4-17 digits for the account number.";
"bank_card_footer" = "CVV is a 3 digit number, typically found on the back of the card.";
"paypal_account_footer" = "PayPal transfer method email address should be same as profile email address.";

"account_information_header" = "%1$@ - %2$@ (%3$@)";
"account_holder_header"="Account Holder";
"address_header"="Address";
"information_header"="Transfer method information";
"intermediary_account_header" = "Intermediary Account";
"contact_information_header" = "Contact Information";

"account_information_title" = "Account Information";

// expiry date format - arguments order is %1$-month, %2$-year(two last digits)
"expiry_date_format" = "%1$02d/%2$02d";
"expiry_date_picker_format" = "yyyy-MM";
"date_format" = "yyyy-MM-dd";

// Account types
"CHECKING" = "Checking";
"SAVINGS" = "Savings";

// Processing View
"processing_view_label" = "Processing";
"complete_view_label" = "Complete";

// Receipt
"title_receipts" = "Transactions";
"empty_list_receipt_message" = "Seems like, you don’t have any Transactions, yet.";
"add_transaction_title" = "Add Transaction";
"account_closure_fee" = "Account Closure Fee";
"account_closure" = "Account Closure";
"account_unload" = "Funds Unloaded";
"adjustment" = "Balance Adjustment";
"annual_fee_refund" = "Annual Fee Refund";
"annual_fee" = "Annual Fee";
"bank_account_transfer_fee" = "Bank Account Return Fee";
"bank_account_transfer_return_fee" = "Bank Account Return Fee";
"bank_account_transfer_return" = "Bank Account Return";
"card_activation_fee_waiver" = "Card Activation Fee Waiver";
"card_activation_fee" = "Card Activation Fee";
"card_fee" = "Card Fee";
"customer_service_fee_refund" = "Customer Service Fee Refund";
"customer_service_fee" = "Customer Service Fee";
"deposit" = "Funds Deposit";
"donation_fee" = "Donation Fee";
"donation_return" = "Donation Return";
"donation" = "Donation";
"dormant_user_fee_refund" = "Dormant User Account Fee Refund";
"dormant_user_fee" = "Dormant User Account Fee";
"expedited_shipping_fee" = "Expedited Shipping Fee";
"foreign_exchange" = "Foreign Exchange";
"generic_fee_refund" = "Generic Fee Refund";
"manual_adjustment" = "Adjustment";
"manual_transfer_to_prepaid_card" = "Card Load";
"merchant_payment_fee" = "Merchant Payment Fee";
"merchant_payment_refund" = "Merchant Payment Refund";
"merchant_payment_return" = "Merchant Payment Return";
"merchant_payment" = "Merchant Payment";
"moneygram_transfer_return" = "MoneyGram Return";
"monthly_fee_refund" = "Monthly Fee Refund";
"monthly_fee" = "Monthly Fee";
"paper_check_fee" = "Paper Check Fee";
"paper_check_refund" = "Paper Check Refund";
"payment_cancellation" = "Payment Cancellation";
"payment_expiration" = "Payment Expired";
"payment_expiry_fee" = "Payment Expiry Fee";
"payment_fee" = "Payment Fee";
"payment_return" = "Payment Return";
"payment_reversal_fee" = "Payment Reversal Fee";
"payment_reversal" = "Payment Reversal";
"payment" = "Payment";
"prepaid_card_balance_inquiry_fee" = "Balance Inquiry Fee";
"prepaid_card_cash_advance" = "Cash Advance";
"prepaid_card_dispute_deposit" = "Disputed Card Deposit";
"prepaid_card_disputed_charge_refund" = "Disputed Charge Refund";
"prepaid_card_domestic_cash_withdrawal_fee" = "ATM Withdrawal";
"prepaid_card_exchange_rate_difference" = "Exchange Rate Difference";
"prepaid_card_manual_unload" = "Card Unload";
"prepaid_card_overseas_cash_withdrawal_fee" = "ATM Withdrawal";
"prepaid_card_pin_change_fee" = "PIN Change Fee";
"prepaid_card_refund" = "Refund";
"prepaid_card_replacement_fee" = "Card Replacement Fee";
"prepaid_card_sale_reversal" = "Reversed Transaction";
"prepaid_card_sale" = "Transaction";
"prepaid_card_unload" = "Card Unload";
"processing_fee" = "Processing Fee";
"standard_shipping_fee" = "Standard Shipping Fee";
"transfer_fee" = "Transfer Fee";
"transfer_to_bank_account" = "Bank Account";
"transfer_to_moneygram" = "MoneyGram";
"transfer_to_paper_check" = "Paper Check";
"transfer_to_prepaid_card" = "Card Load";
"transfer_to_program_account" = "Transfer to Program";
"transfer_to_user" = "Transfer to User";
"transfer_to_western_union" = "Western Union";
"transfer_to_wire" = "Wire Transfer";
"transfer_to_wubs_wire" = "Wire Transfer";
"virtual_incentive_cancellation" = "Promo Cancellation";
"virtual_incentive_issuance" = "Issued Promo";
"virtual_incentive_purchase" = "Promo Purchase";
"virtual_incentive_refund" = "Promo Refund";
"western_union_transfer_return" = "Western Union Withdrawal";
"wire_transfer_fee" = "Wire Transfer Fee";
"wire_transfer_return" = "Wire Transfer Return";
"wubs_wire_transfer_return" = "Wire Transfer Return";
"unknown_receipt_type" = "Unknown Transaction Type";

// Receipt Detail
"title_receipts_details" = "Transaction Details";
"receipt_details_section_header_transaction" = "Transaction";
"receipt_details_section_header_details" = "Details";
"receipt_details_section_header_fee" = "Fee Specification";
"receipt_details_section_header_notes" = "Notes";
"receipt_details_charity_name" = "Charity Name:";
"receipt_details_check_number" = "Check Number:";
"receipt_details_client_payment_id" = "Client Transaction ID:";
"receipt_details_website" = "Promo Website:";
"receipt_details_transaction" = "Transaction:";
"receipt_details_amount" = "Amount:";
"receipt_details_fee" = "Fee:";
"receipt_details_receipt_id" = "Receipt ID:";
"receipt_details_date" = "Date:";

// Transfer Funds
"transfer_funds" = "Transfer Funds";
"add_transfer_section_header_destination" = "DESTINATION";
"add_transfer_section_header_transfer" = "TRANSFER";
"add_transfer_section_header_notes" = "NOTES";
"transfer_amount" = "Amount";
"transfer_all_funds" = "Transfer all funds";
"available_balance_footer" = "Available for transfer: %1$@";
"transfer_description" = "Description";
"add_transfer_next_button" = "Next";
"schedule_transfer_section_header_destination" = "DESITINATION";
"schedule_transfer_section_header_foreignExchange" = "FOREIGN EXCHANGE";
"schedule_transfer_section_header_summary" = "SUMMARY";
"schedule_transfer_section_header_notes" = "NOTES";
"schedule_transfer_button" = "Confirm";

// List of countries
// Source: https://datahub.io/core/country-list#data
"AF"="Afghanistan";
"AX"="Åland Islands";
"AL"="Albania";
"DZ"="Algeria";
"AS"="American Samoa";
"AD"="Andorra";
"AO"="Angola";
"AI"="Anguilla";
"AQ"="Antarctica";
"AG"="Antigua and Barbuda";
"AR"="Argentina";
"AN"="Netherlands Antilles";
"AM"="Armenia";
"AW"="Aruba";
"AU"="Australia";
"AT"="Austria";
"AZ"="Azerbaijan";
"BH"="Bahrain";
"BS"="Bahamas";
"BD"="Bangladesh";
"BB"="Barbados";
"BY"="Belarus";
"BE"="Belgium";
"BZ"="Belize";
"BJ"="Benin";
"BM"="Bermuda";
"BT"="Bhutan";
"BO"="Bolivia, Plurinational State of";
"BQ"="Bonaire, Sint Eustatius and Saba";
"BA"="Bosnia and Herzegovina";
"BW"="Botswana";
"BV"="Bouvet Island";
"BR"="Brazil";
"IO"="British Indian Ocean Territory";
"BN"="Brunei Darussalam";
"BG"="Bulgaria";
"BF"="Burkina Faso";
"BI"="Burundi";
"KH"="Cambodia";
"CM"="Cameroon";
"CA"="Canada";
"CV"="Cape Verde";
"KY"="Cayman Islands";
"CF"="Central African Republic";
"TD"="Chad";
"CL"="Chile";
"CN"="China";
"CX"="Christmas Island";
"CC"="Cocos (Keeling) Islands";
"CO"="Colombia";
"KM"="Comoros";
"CG"="Congo";
"CD"="Congo, the Democratic Republic of the";
"CK"="Cook Islands";
"CR"="Costa Rica";
"CI"="Côte d'Ivoire";
"HR"="Croatia";
"CU"="Cuba";
"CW"="Curaçao";
"CY"="Cyprus";
"CZ"="Czech Republic";
"DK"="Denmark";
"DJ"="Djibouti";
"DM"="Dominica";
"DO"="Dominican Republic";
"EC"="Ecuador";
"EG"="Egypt";
"SV"="El Salvador";
"GQ"="Equatorial Guinea";
"ER"="Eritrea";
"EE"="Estonia";
"ET"="Ethiopia";
"FK"="Falkland Islands (Malvinas)";
"FO"="Faroe Islands";
"FJ"="Fiji";
"FI"="Finland";
"FR"="France";
"GF"="French Guiana";
"PF"="French Polynesia";
"TF"="French Southern Territories";
"GA"="Gabon";
"GM"="Gambia";
"GE"="Georgia";
"DE"="Germany";
"GH"="Ghana";
"GI"="Gibraltar";
"GR"="Greece";
"GL"="Greenland";
"GD"="Grenada";
"GP"="Guadeloupe";
"GU"="Guam";
"GT"="Guatemala";
"GG"="Guernsey";
"GN"="Guinea";
"GW"="Guinea-Bissau";
"GY"="Guyana";
"HT"="Haiti";
"HM"="Heard Island and McDonald Islands";
"VA"="Holy See (Vatican City State)";
"HN"="Honduras";
"HK"="Hong Kong";
"HU"="Hungary";
"IS"="Iceland";
"IN"="India";
"ID"="Indonesia";
"IR"="Iran, Islamic Republic of";
"IQ"="Iraq";
"IE"="Ireland";
"IM"="Isle of Man";
"IL"="Israel";
"IT"="Italy";
"JM"="Jamaica";
"JP"="Japan";
"JE"="Jersey";
"JO"="Jordan";
"KZ"="Kazakhstan";
"KE"="Kenya";
"KI"="Kiribati";
"KP"="Korea, Democratic People's Republic of";
"KR"="Korea, Republic of";
"KW"="Kuwait";
"KG"="Kyrgyzstan";
"LA"="Lao People's Democratic Republic";
"LV"="Latvia";
"LB"="Lebanon";
"LS"="Lesotho";
"LR"="Liberia";
"LY"="Libya";
"LI"="Liechtenstein";
"LT"="Lithuania";
"LU"="Luxembourg";
"MO"="Macao";
"MK"="Macedonia, the Former Yugoslav Republic of";
"MG"="Madagascar";
"MW"="Malawi";
"MY"="Malaysia";
"MV"="Maldives";
"ML"="Mali";
"MT"="Malta";
"MH"="Marshall Islands";
"MQ"="Martinique";
"MR"="Mauritania";
"MU"="Mauritius";
"YT"="Mayotte";
"MX"="Mexico";
"FM"="Micronesia, Federated States of";
"MD"="Moldova, Republic of";
"MC"="Monaco";
"MN"="Mongolia";
"ME"="Montenegro";
"MS"="Montserrat";
"MA"="Morocco";
"MZ"="Mozambique";
"MM"="Myanmar";
"NA"="Namibia";
"NR"="Nauru";
"NP"="Nepal";
"NL"="Netherlands";
"NC"="New Caledonia";
"NZ"="New Zealand";
"NI"="Nicaragua";
"NE"="Niger";
"NG"="Nigeria";
"NU"="Niue";
"NF"="Norfolk Island";
"MP"="Northern Mariana Islands";
"NO"="Norway";
"OM"="Oman";
"PK"="Pakistan";
"PW"="Palau";
"PS"="Palestine, State of";
"PA"="Panama";
"PG"="Papua New Guinea";
"PY"="Paraguay";
"PE"="Peru";
"PH"="Philippines";
"PN"="Pitcairn";
"PL"="Poland";
"PT"="Portugal";
"PR"="Puerto Rico";
"QA"="Qatar";
"RE"="Réunion";
"RO"="Romania";
"RU"="Russian Federation";
"RW"="Rwanda";
"BL"="Saint Barthélemy";
"SH"="Saint Helena, Ascension and Tristan da Cunha";
"KN"="Saint Kitts and Nevis";
"LC"="Saint Lucia";
"MF"="Saint Martin (French part)";
"PM"="Saint Pierre and Miquelon";
"VC"="Saint Vincent and the Grenadines";
"WS"="Samoa";
"SM"="San Marino";
"ST"="Sao Tome and Principe";
"SA"="Saudi Arabia";
"SN"="Senegal";
"RS"="Serbia";
"SC"="Seychelles";
"SL"="Sierra Leone";
"SG"="Singapore";
"SX"="Sint Maarten (Dutch part)";
"SK"="Slovakia";
"SI"="Slovenia";
"SB"="Solomon Islands";
"SO"="Somalia";
"ZA"="South Africa";
"GS"="South Georgia and the South Sandwich Islands";
"SS"="South Sudan";
"ES"="Spain";
"LK"="Sri Lanka";
"SD"="Sudan";
"SR"="Suriname";
"SJ"="Svalbard and Jan Mayen";
"SZ"="Swaziland";
"SE"="Sweden";
"CH"="Switzerland";
"SY"="Syrian Arab Republic";
"TW"="Taiwan, Province of China";
"TJ"="Tajikistan";
"TZ"="Tanzania, United Republic of";
"TH"="Thailand";
"TL"="Timor-Leste";
"TG"="Togo";
"TK"="Tokelau";
"TO"="Tonga";
"TT"="Trinidad and Tobago";
"TN"="Tunisia";
"TR"="Turkey";
"TM"="Turkmenistan";
"TC"="Turks and Caicos Islands";
"TV"="Tuvalu";
"UG"="Uganda";
"UA"="Ukraine";
"AE"="United Arab Emirates";
"GB"="United Kingdom";
"US"="United States";
"UM"="United States Minor Outlying Islands";
"UY"="Uruguay";
"UZ"="Uzbekistan";
"VU"="Vanuatu";
"VE"="Venezuela, Bolivarian Republic of";
"VN"="Viet Nam";
"VG"="Virgin Islands, British";
"VI"="Virgin Islands, U.S.";
"WF"="Wallis and Futuna";
"EH"="Western Sahara";
"YE"="Yemen";
"XK"="Kosovo";
"ZM"="Zambia";
"ZW"="Zimbabwe";
