...
        presenter.loadTransferMethodKeys()
    }

    // MARK: - Setup Layout
    private func setupTransferMethodTypeTableView() {
        tableView = UITableView(frame: .zero, style: .plain)
        tableView.accessibilityIdentifier = "transferMethodTableView"
        tableView.register(SelectTransferMethodTypeCell.self,
                           forCellReuseIdentifier: SelectTransferMethodTypeCell.reuseId)
        let footerView = UIView(frame: CGRect(x: 0, y: 0, width: tableView.frame.size.width, height: 0.5))
        footerView.backgroundColor = tableView.separatorColor
        tableView.tableFooterView = footerView
    }
...
